--- a/src/components/pass.css
+++ b/src/components/pass.css
@@ -1,3 +1,28 @@
 .passwordBox {
-    box-sizing: content-box;
+    display: block;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    bottom: auto;
+    width: 100%;
+    background-color: #F6CACA;
+    border-radius: 10px;
+    border-width: 5px;
+    box-shadow: #0A014F;
+    color: hsl(206, 17%, 28%);
+    font-size: 18px;
+    max-width: 800px;
+    padding: 30px 40px;
+}
+
+.cardHeader {
+
+}
+
+.cardBody {
+
+}
+
+.cardFooter {
+
 }
